# gogh

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SKILL.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  index.html  install.sh  pyproject.toml  uninstall.sh
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
.obsidian/snippets/: brain.css
.raw/: .manifest.json
.raw/research/: anthropic-frontend-design-extract.md  design-theory-extract.md  ecosystem-reception-extract.md  github-repo-extract.md  impeccable-repo-extract.md  krehel-article-extract.md  mifb-skill-extract.md  reception-extract.md  (+3 more)
_templates/: decision.md  source-note.md  standard-note.md
agents/: gogh-secretary.md
docs/: OPERATOR_KIT.md  PRODUCT_BOUNDARIES.md
gogh_brain/: __init__.py  cli.py
references/: CONFIDENCE_TAGS.md  adapter-manifest.json  adapter-plan.md  claim-ledger.md  current-requirements.md  market-research.md  product-spec.md  research-plan.md  safety-gates.md  skill-registry.json  source-ledger.json  source-manifest-template.md  source-map.md
scripts/: audit_brain.py  build_demo_vault.py  generate_vault_visuals.py  import_skill_capture.py  ingest_source.py  lint_vault.py  package_release.py  render_stack_advisor.py  scaffold_vault.py  synthesize_brain.py  vault_dates.py
taste_skill_brain/: __init__.py  cli.py
tests/: test_adapters.py  test_pipeline.py
wiki/: hot.md  index.md  log.md  overview.md
(+273 files in other folders)
