[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taste-skill-brain"
version = "0.1.0"
description = "Taste Skill Brain Obsidian brain template and script layer."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Daniel Agrici"}]
dependencies = []

[project.scripts]
taste-skill-brain = "taste_skill_brain.cli:main"

[tool.setuptools]
packages = ["taste_skill_brain"]
